# challenge-pot

./: .gitignore  Cargo.toml  interact.md  main.css
.github/workflows/: web-deploy.yml
.helix/: languages.toml
common/: Cargo.toml
common/src/: api_error.rs  leaderboard.rs  lib.rs  login.rs  track.rs
server/: Cargo.toml  interact.md
server/src/: application.rs  domain.rs  infrastructure.rs  lib.rs  main.rs  presentation.rs
server/src/application/: ports.rs  use_cases.rs
server/src/application/use_cases/: get_leaderboard.rs  get_user.rs  track_activity.rs
server/src/domain/: activity.rs  user.rs
server/src/infrastructure/: fs_persistence.rs
server/src/infrastructure/fs_persistence/: mappers.rs  models.rs
server/src/presentation/: http.rs  mapper.rs
server/src/presentation/http/: auth.rs  error.rs  handlers.rs  mapper.rs
server/src/presentation/http/handlers/: health.rs  leaderboard.rs  login.rs  track.rs
src/: main.rs
src/components/: bottom_bar.rs
web/: Cargo.toml  index.html  interact.md  main.css
web/src/: api.rs  auth.rs  main.rs  pages.rs
web/src/api/: client.rs  leaderboard.rs  login.rs  track.rs
web/src/components/: bottom_bar.rs
web/src/pages/: about.rs  leaderboard.rs  login.rs  track.rs
web/src/pages/leaderboard/: table.rs
web/src/pages/track/: sugar_grams_form.rs
