[package]
name = "challenge-pot-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = "0.4.45"
common = { path = "../common" }
jsonwebtoken = {version = "10.4.0", features = ["rust_crypto"]}
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
