[package]
name = "challenge-pot-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = { version = "0.4.45", features = ["serde"] } 
common = { path = "../common" }
jsonwebtoken = {version = "10.4.0", features = ["rust_crypto"]}
uuid = { version = "1.23", features = ["v4", "v7", "serde"] }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
