[package]
name = "challenge-pot-web"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
console_error_panic_hook = "0.1.7"
gloo-net = { version = "0.7.0", features = ["http"] }
leptos = { version = "0.8.19", features = ["csr"] }
leptos_router = "0.8.13"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
